Updated section on process

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -248,13 +248,20 @@ In order to feel familiar to new users and focus our design efforts on integrati
 Unlike file managers, the basic unit of data is not a file, but an \emph{instance} - corresponding to an RDF instance or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data) into discrete instances with properties; for JSON or XML data feeds, we represented all subtrees with more than 1 child as its an instance.  
 
 \subsubsection{Multipath selection: link-sliding for heterogeneous sets}
-When working with instances, users may be interested in a particular aspect of an instance rather than just the instance itself; for example, a user may be interested in the price of a particular product, its rating, manufacturer, and so on.  These are represented as \emph{properties} of the item, listed under the name of the instance.  Selecting any of such properties creates a \emph{path   selection} which dereferences all of the instances in that group that have that property, yielding their corresponding values.  For example, selecting the \emph{manufacturer} property for an instance in a group will cause the manufacturer of that item to appear alongside its label, and will also cause the manufacturers of \emph{all other   instances in that group that have a manufacturer property} to be dereferenced (and displayed next to their instances) as well.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that such value can be further dereferenced.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's overall reputation, so might select its ``reputation score'' property, causing the previous path selection to be extended.
 
-Instances that cannot be dereferenced by a particular path selection  are left alone; an additional path selection can be created for such insances, which, like the first path selection, causes all appropriate instances to be dereferenced.  Each group can carry an arbitrary number of path selections, and each path selection can be extended arbitrarily deep by selecting successive properties of values. This achieves the ability to \emph{link slide} as introduced by Parallax, but across sets of heterogeneous items by supporting multple parallel dereferenced paths simultaneously \cite{parallax}.  
+Typically users are interested in different \emph{properties} of an instance, for example, a user is interested in a product and its price, rating, manufacturer and so on.  An instance's properties are displayed beneath it; selecting a property creates a \emph{path selection}, which dereferences all of the instances in a group that contain the selected property and displays their corresponding values.  For example, when a user selects the \emph{manufacturer} property for a product, all products in the same group with a manufacturer property will be dereferenced, causing the manufactueres to be displayed alongside their corresponding products.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that this value can be dereferenced further.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's reputation and selects their ``reputation score'' property, causing the previous path selection to be extended.
+
+When instances cannot be dereferenced by the chosen path selection, an additional path selection can be created. As with the first path selection, it causes all matching instances to be dereferenced.  Each group can carry an arbitrary number of path selections, and each path selection can be extended continually by selecting successive properties of values. This achieves the ability to \emph{link slide} as introduced by Parallax~\cite{parallax}, but across sets of heterogeneous items by supporting multiple parallel dereferenced paths simultaneously.  
+
+Multiple selection group-dereferencing results in two effects: 
+
+\begin{enumerate}
+\item Clicking on a property dereferences all corresponding values makes it easy to quickly compare all instances that have the same structure.  Although we were concerned that users might be surprised that path selection applied to all objects within each group in parallel, users adapted very quickly and used this functionality to save them time.   
+
+\item That supporting the selection of different paths by structure lets values be selected using separate different paths - making it possible to easily cope with properties with different names, and even at levels -- select the appropriate values even between instances that exhibit both  terminological and structurally heterogeneity.
+\end{enumerate}
+
  
-The effect that multiple selection group-dereferencing of values are twofold: the fact that clicking on a property dereferences all corresponding values makes it easy to quickly compare all instances that have the same structure.  Although we were concerned that users might be surprised that path selection applied to all objects within each group in parallel, users adapted very quickly and used this functionality to save them time.   
-
-The second effect that this multiple paths is that supporting the selection of different paths by structure lets values be selected using separate different paths - making it possible to easily cope with properties with different names, and even at levels -- select the appropriate values even between instances that exhibit both  terminological and structurally heterogeneity.
 
 % Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
 
