--- a/chi2012.tex
+++ b/chi2012.tex
@@ -260,13 +260,13 @@ The second effect that this multiple paths is that supporting the selection of d
 
 A major challenge with integration from multiple sources is coreference consolidation, or combining representations that co-refer to the same entity into one.  For example, consolidating one's friends from Facebook, Google+, and LinkedIn, one might quickly want to de-duplicate and combine friends that use multiple services so that they each have one representation.
 
-Although we considered a way to do this automatically, PS.2 revealed no way to reliably identify co-referring instances; due to a lack of standard URIs across social networks, IDs used to identify particular individuals were system-specific.  Thus, we sought to make instead make it use-driven, and easy to do manually.  
+Although we considered a way to do this automatically, PS.2 revealed no way to reliably identify co-referring instances; due to a lack of standard URIs across social networks, ids used by each network to identify particular individuals were system-specific. Thus, we sought to make instead make it user-driven, and easy to do manually.  
 
-In order to remain consistent with the drag-and-drop interactions used throughout the interface, we decided that simply dragging an instance onto another instance was a likely intuitive way for people to specify that two things should be combined.  
+In order to remain consistent with the drag-and-drop interactions used throughout the interface, we decided that simply dragging an instance onto another instance was a likely intuitive way for people to specify that two things should be combined.  Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.  We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. 
 
-Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.
+By having co-reference consolidation user-driven, we gave the user freedom to combine things when suited to his or her task. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred to keep things separate.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
-Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
+% Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
 
 \subsection{Summary of interaction features}
 
