--- a/chi2012.tex
+++ b/chi2012.tex
@@ -249,7 +249,15 @@ Unlike file managers, the basic unit of data is not a file, but an \emph{instanc
 
 \subsubsection{Multipath selection: link-sliding for heterogeneous sets}
 
-Typically users are interested in different \emph{properties} of an instance, for example, a user is interested in a product and its price, rating, manufacturer and so on.  An instance's properties are displayed beneath it; selecting a property creates a \emph{path selection}, which dereferences all of the instances in a group that contain the selected property and displays their corresponding values.  For example, when a user selects the \emph{manufacturer} property for a product, all products in the same group with a manufacturer property will be dereferenced, causing the manufactueres to be displayed alongside their corresponding products.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that this value can be dereferenced further.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's reputation and selects their ``reputation score'' property, causing the previous path selection to be extended.
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=8cm]{img/multipathing}
+\caption{To see properties, users click on the name of the property. When instances do not have a particular property, additional property names can be added.}
+\label{fig:multipathing}
+\end{center}
+\end{figure}
+
+Typically users are interested in different \emph{properties} of an instance, for example, a user is interested in a product and its price, rating, manufacturer and so on.  An instance's properties are displayed beneath it; selecting a property creates a \emph{path selection}, which dereferences all of the instances in a group that contain the selected property and displays their corresponding values.  For example, when a user selects the \emph{manufacturer} property for a product, all products in the same group with a manufacturer property will be dereferenced, causing the manufactueres to be displayed alongside their corresponding products.  When such a path selection is applied, the properties displayed are updated to be the set of properties of the \emph{terminating value of the path}, so that this value can be dereferenced further.  For example, once selecting a manufacturer, a user may want to know the product's manufacturer's reputation and selects their ``reputation score'' property, causing the previous path selection to be extended. This process is illustrated in Figure \ref{fig:multipathing}.
 
 When instances cannot be dereferenced by the chosen path selection, an additional path selection can be created. As with the first path selection, it causes all matching instances to be dereferenced.  Each group can carry an arbitrary number of path selections, and each path selection can be extended continually by selecting successive properties of values. This achieves the ability to \emph{link slide} as introduced by Parallax~\cite{parallax}, but across sets of heterogeneous items by supporting multiple parallel dereferenced paths simultaneously.  
 
@@ -258,22 +266,38 @@ Multiple selection group-dereferencing results in two effects:
 \begin{enumerate}
 \item Clicking on a property dereferences all corresponding values makes it easy to quickly compare all instances that have the same structure.  Although we were concerned that users might be surprised that path selection applied to all objects within each group in parallel, users adapted very quickly and used this functionality to save them time.   
 
-\item That supporting the selection of different paths by structure lets values be selected using separate different paths - making it possible to easily cope with properties with different names, and even at levels -- select the appropriate values even between instances that exhibit both  terminological and structurally heterogeneity.
+\item Supporting dereferencing along different paths \emph{by structure} allows instances with different property names, and even sub-structures to be quickly consolidated by separate dereferencing, thereby effectively coping with terminological and structural hetereogeneity.
 \end{enumerate}
 
- 
-
 \subsubsection{Coreference management: Drag-and-Drop Same-As}
+
+\begin{figure*}[htbp]
+\begin{center}
+\includegraphics[width=18cm]{img/sameas}
+\caption{When two instances represent the same entity, users can drag one on top of the other, and they are combined.}
+\label{fig:sameas}
+\end{center}
+\end{figure*}
 
 A major challenge with integration from multiple sources is coreference consolidation, or combining representations that co-refer to the same entity into one.  For example, consolidating one's friends from Facebook, Google+, and LinkedIn, one might quickly want to de-duplicate and combine friends that use multiple services so that they each have one representation.
 
 Although we considered a way to do this automatically, PS.2 revealed no way to reliably identify co-referring instances; due to a lack of standard URIs across social networks, ids used by each network to identify particular individuals were system-specific. Thus, we sought to make instead make it user-driven, and easy to do manually.  
 
-In order to remain consistent with the drag-and-drop interactions used throughout the interface, we decided that simply dragging an instance onto another instance was a likely intuitive way for people to specify that two things should be combined.  Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.  We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. 
+In order to remain consistent with the drag-and-drop interactions used throughout the interface, we decided that simply dragging an instance onto another instance was a likely intuitive way for people to specify that two things should be combined.  An illustration of this interaction is provided in Figure \ref{fig:sameas}. Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.  We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. 
 
 By having co-reference consolidation user-driven, we gave the user freedom to combine things when suited to his or her task. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred to keep things separate.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
+\subsubsection{Enumerated-type value consolidation}
+
+Related to the concept of co-reference, we extended the drag-and-drop sameas support to also be used to consolidate inconsistant enumerated values of properties, such as ``Casual dining'' vs ``Relaxed'' so that they can be uniformly compared. This allows the creation of meaningful, de-duplicated histograms and other visualisations.
+
+\subsubsection{Model-based brushing}
+
+Since it can get confusing having an instance represented in multiple groups, 
+
 % Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
+
+\subsubsection{Adaptive visualisation modes}
 
 \subsection{Summary of interaction features}
 
@@ -285,32 +309,15 @@ By having co-reference consolidation user-driven, we gave the user freedom to co
 \end{itemize}
 
 
-As we refined our designs, we arrived at four simple mechanisms to support data mixing.  These were combined with a number of simple interaction mechanisms that were borrowed from other systems
 
-The ultimatel design of datapal
+%% Interaction features 
+%% 	multiple paths selection
+%% 	sameas interactions
+%% 	visualisation of partial results
 
-Interaction features 
-	multiple paths selection
-	sameas interactions
-	visualisation of partial results
+%% Design process
 
-Design process
 
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=8cm]{img/multipathing}
-\caption{To see properties, users click on the name of the property. When instances do not have a particular property, additional property names can be added.}
-\label{fig:multipathing}
-\end{center}
-\end{figure}
-
-\begin{figure*}[htbp]
-\begin{center}
-\includegraphics[width=18cm]{img/sameas}
-\caption{When two instances represent the same entity, users can drag one on top of the other, and they are combined.}
-\label{fig:sameas}
-\end{center}
-\end{figure*}
 
 
 \section{Methodology}
