--- a/chi2012.tex
+++ b/chi2012.tex
@@ -349,9 +349,9 @@ Task	 &Choices	&Data Sources\\
 \normalsize
 \end{table*}%
 
-Each task had an A and B condition.  The A condition, the participant could only use WebBox to make their decision; and in the B condition the participant was given the choice to using any websites they desired and or workbook in Microsoft Excel containing the data taken from the data sources to make their choice on individual spreadsheets.
+Each task had an A and B condition.  The A condition, the participant could only use DataPalette to make their decision; and in the B condition the participant was given the choice to using any websites they desired and or workbook in Microsoft Excel containing the data taken from the data sources to make their choice on individual spreadsheets.
 
-Each study consisted of two tasks, one A and one B condition.  Each participant was given 10 minutes to complete a task.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute WebBox tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
+Each study consisted of two tasks, one A and one B condition.  Each participant was given 10 minutes to complete a task.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute DataPalette tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
 
 \subsection{Data Collection}
 Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.  At the end of the study the participant completed an exit survey.  
@@ -411,7 +411,7 @@ chosen restaurant/uni &4.1&2.4&3.5&4.3&3.3&&2.4&1.4&4.2&1.6, \newline 1.3, \newl
 \normalsize
 \end{table*}
 
-In the A condition, where participants used WebBox to complete their tasks they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of WebBox, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
+In the A condition, where participants used DataPalette to complete their tasks they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
 
 In the B conditions, participants were given the option of using websites and or a spreadsheet to make their choice.  Participants who opted to use websites to make their decisions repeatedly encountered a number of difficulties and issues. In particular, there was significant confusion over the meaning of data points, for example the percentage-based rankings of university teaching by the Times Higher Education. There were numerous usability issues in using websites, particularly in searching for university courses and course requirements. Similarly, participants found it difficult to understand the locations of restaurants in cities that they were not familiar, and could not find a way to plot the shortlist of restaurants onto the same map using the websites. Overall, the users that spent the most time using websites exhibited significant frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations), and all ended up falling back to using the supplied spreadsheets.
 
@@ -423,7 +423,7 @@ of which university to choose by averaging different metrics supplied by the dat
 
 Notably, a number of users admittedly introduced their own bias into the choices in both A and B conditions: ``I prefer Indian food, so I will choose the Indian restaurant'', and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating those that required bus transfers (the protocol did not mention routing/transfers at all).
 
-In the exit survey, the users noted that they would use WebBox for finding a property to rent/buy, choosing a job and purchasing electronic devices, in the future.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the spontaneity, but would use it for making more important decisions.  In order to improve our solutions the participants suggested making the origin of the information clearer, sorting instances, and explanations of ratings and scoring systems (however some of these are not transparent on websites).
+In the exit survey, the users noted that they would use DataPalette for finding a property to rent/buy, choosing a job and purchasing electronic devices, in the future.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the spontaneity, but would use it for making more important decisions.  In order to improve our solutions the participants suggested making the origin of the information clearer, sorting instances, and explanations of ratings and scoring systems (however some of these are not transparent on websites).
 
 \section{Discussion}
 
@@ -460,11 +460,11 @@ of these next to the set of choices. They then made their choice based on the va
 
 Two contrasting approaches that participants followed was to use the data to rule out candidates, or to use the data to
 directly compare candidates at once. Our pool of participants exhibited both behaviours evenly, however in the condition
-when using the WebBox interface, significantly more comparison (and visualisation of values) was performed, with fewer
+when using the DataPalette interface, significantly more comparison (and visualisation of values) was performed, with fewer
 participants using the ``ruling out'' process. A consequence of this was that when asked to justify their choices, users were
 able to verify their values on-screen immediately, whereas those who had ruled-out had to memorise their reasons, with
 mixed success  -- many participants had to look through the data sources to re-find the reasons why they has ruled out some choices.
-Therefore, the uses that were using WebBox were more confident in their choices, and knew exactly why they had chosen them,
+Therefore, the uses that were using DataPalette were more confident in their choices, and knew exactly why they had chosen them,
 often pointing to the screens to show and verify each choice as they explained them.
 
 %What we found 
