working on brushing

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -281,15 +281,15 @@ Multiple selection group-dereferencing results in two effects:
 
 A major challenge with integration from multiple sources is coreference consolidation, or combining representations that co-refer to the same entity into one.  For example, consolidating one's friends from Facebook, Google+, and LinkedIn, one might quickly want to de-duplicate and combine friends that use multiple services so that they each have one representation.
 
-Although we considered a way to do this automatically, PS.2 revealed no way to reliably identify co-referring instances; due to a lack of standard URIs across social networks, ids used by each network to identify particular individuals were system-specific. Thus, we sought to make instead make it user-driven, and easy to do manually.  
+Although we considered a way to do this automatically, PS.2 revealed no way to reliably identify co-referring instances; due to a lack of standard URIs across social networks, identifiers used by each network were system-specific and inconsistent. Thus, we sought to make instead make it user-driven, and easy to do manually.  
 
-In order to remain consistent with the drag-and-drop interactions used throughout the interface, we decided that simply dragging an instance onto another instance was a likely intuitive way for people to specify that two things should be combined.  An illustration of this interaction is provided in Figure \ref{fig:sameas}. Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.  We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. 
+To remain consistent with the drag-and-drop interactions used throughout the interface, we introduced the ability to simply drag one instance on top of another to specify that two things should be combined.  An illustration of this interaction is provided in Figure \ref{fig:sameas}. Although general, this can be tedious for groups of items; to support more efficient combination, we extended this to allow entire groups to be dropped on other groups.  When this is done, DataPalette attempts to identify matching pairs among items in the dragged and target groups by comparing each pairs' labels.  Only exact matches (modulo white space/underscores) are considered matches and automatically combined.  The rest are added to the target group as distinct elements, and may be explicitly combined by hand.  We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. 
 
 By having co-reference consolidation user-driven, we gave the user freedom to combine things when suited to his or her task. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred to keep things separate.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
 \subsubsection{Enumerated-type value consolidation}
 
-Related to the concept of co-reference, PS2 revealed that enumerated values of properties were often inconsistent, e.g. ``Casual dining'' vs ``Relaxed'' for a restaurant's ``atmosphere'' property. To reoncile such differences, so that they can be uniformly compared, we extended the drag and drop support of co-reference combination to support enumerated literal values as well,  This effectively allowed de-duplicated histograms and other visualisations to be made.
+Related to the concept of co-reference, PS.2 revealed that enumerated values of properties were often inconsistent, e.g. ``Casual dining'' vs ``Relaxed'' for a restaurant's ``atmosphere'' property. To reoncile such differences, so that they can be uniformly compared, we extended the drag and drop support of co-reference combination to support enumerated literal values as well,  This effectively allowed de-duplicated histograms and other visualisations to be made.
 
 \subsubsection{Model-based brushing}
 
